--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 				<li>
 					<label id="costlabel">Coût total du/des objet(s) :</label>
 					<input required type="number" min="0" value="0" id="cost" name="cost_input" />
+					<img class="inputbullion" src="img/bullion.png" width="20px" alt="bullion">
 				</li>
 				<li>
 					<label id="currentgoldlabel">Votre quantité d'or :</label>
 					<input required type="number" min="0" max="5000" value="0" id="currentgold" name="currentgold_input" />
+					<img class="inputbullion" src="img/bullion.png" width="20px" alt="bullion">
 				</li>
 				
 				<li>
