fix never changes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<li class="button">
 				<button id="calculate" type="submit">Calculer</button>
 			</li>
-			<li>
+			<li id="resultli">
 				<span id="resulttext">Jour(s) de grind : </span>
 				<span id="result"></span>
 			</li>
